--- a/android/testData/guiTests/SimpleApplication/app/src/main/res/layout/absolute.xml
+++ b/android/testData/guiTests/SimpleApplication/app/src/main/res/layout/absolute.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <Button
