Fix creation of style item table in AarStyleResourceItem
Before this change style items in android namespace had wrong names and were not associated with the correct namespace.

Avoid creating duplicate ID and ATTR resource items in AarSourceResourceRepository.

Also avoid
Test: AarSourceResourceRepositoryTest
Bug: 80307626
Change-Id: I40e891e5395bbd9abbe5f10309c0e9bb62521f17

--- a/android/testData/rendering/exploded-aar/my_aar_lib/res/values/foo.xml
+++ b/android/testData/rendering/exploded-aar/my_aar_lib/res/values/foo.xml
@@ -20,10 +20,10 @@
         <item name="foo">?android:colorForeground</item>
     </style>
     <declare-styleable name="Styleable1">
-        <attr name="some_attr" />
+        <attr name="some_attr" format="color"/>
     </declare-styleable>
     <declare-styleable name="Styleable.with.dots">
-        <attr name="some_attr" />
+        <attr name="some_attr"/>
     </declare-styleable>
     <declare-styleable name="Styleable_with_underscore">
         <attr name="app_attr1" />
