Bring AarProtoResourceRepositoryTest up to date
Refresh data used by AarProtoResourceRepositoryTest using the latest auto-namespacing code.

Fix few issues that came up with the new test data.

Test: AarProtoResourceRepositoryTest
Bug: 74425399
Change-Id: I1880455e27ed70829bde7cc2f424a21887152ba2

--- a/android/testData/design_aar/res/color-v23/design_tint_password_toggle.xml
+++ b/android/testData/design_aar/res/color-v23/design_tint_password_toggle.xml
@@ -14,6 +14,10 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="?android:attr/colorForeground" android:alpha="0.54"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item
+        android:alpha="0.54"
+        android:color="?android:attr/colorForeground"/>
+
 </selector>
