--- a/android/testData/design_aar/res/color/design_tint_password_toggle.xml
+++ b/android/testData/design_aar/res/color/design_tint_password_toggle.xml
@@ -15,6 +15,10 @@
      limitations under the License.
 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:color="?android:attr/colorForeground" app:alpha="0.54"/>
+    xmlns:ns0="http://schemas.android.com/apk/res/android.support.v7.appcompat" >
+
+    <item
+        ns0:alpha="0.54"
+        android:color="?android:attr/colorForeground"/>
+
 </selector>
