--- a/android/testData/design_aar/res/layout/design_layout_snackbar_include.xml
+++ b/android/testData/design_aar/res/layout/design_layout_snackbar_include.xml
@@ -14,40 +14,38 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
 -->
-
-<view
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    class="android.support.design.internal.SnackbarContentLayout"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+<view xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="bottom">
+    android:layout_gravity="bottom"
+    class="android.support.design.internal.SnackbarContentLayout"
+    android:theme="@*android.support.v7.appcompat:style/ThemeOverlay.AppCompat.Dark" >
 
     <TextView
         android:id="@+id/snackbar_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|left|start"
         android:layout_weight="1"
-        android:paddingTop="@dimen/design_snackbar_padding_vertical"
+        android:ellipsize="end"
+        android:maxLines="@integer/design_snackbar_text_max_lines"
         android:paddingBottom="@dimen/design_snackbar_padding_vertical"
         android:paddingLeft="@dimen/design_snackbar_padding_horizontal"
         android:paddingRight="@dimen/design_snackbar_padding_horizontal"
-        android:textAppearance="@style/TextAppearance.Design.Snackbar.Message"
-        android:maxLines="@integer/design_snackbar_text_max_lines"
-        android:layout_gravity="center_vertical|left|start"
-        android:ellipsize="end"
-        android:textAlignment="viewStart"/>
+        android:paddingTop="@dimen/design_snackbar_padding_vertical"
+        android:textAlignment="viewStart"
+        android:textAppearance="@style/TextAppearance.Design.Snackbar.Message" />
 
     <Button
         android:id="@+id/snackbar_action"
+        style="?android.support.v7.appcompat:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|right|end"
         android:layout_marginLeft="@dimen/design_snackbar_extra_spacing_horizontal"
         android:layout_marginStart="@dimen/design_snackbar_extra_spacing_horizontal"
-        android:layout_gravity="center_vertical|right|end"
         android:minWidth="48dp"
-        android:visibility="gone"
-        android:textColor="?attr/colorAccent"
-        style="?attr/borderlessButtonStyle"/>
+        android:textColor="?android.support.v7.appcompat:attr/colorAccent"
+        android:visibility="gone" />
 
 </view>
