--- a/android/testData/design_aar/res/animator-v21/design_appbar_state_list_animator.xml
+++ b/android/testData/design_aar/res/animator-v21/design_appbar_state_list_animator.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The Android Open Source Project
+<!--
+ Copyright (C) 2016 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,27 +15,31 @@
      limitations under the License.
 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:ns0="http://schemas.android.com/apk/res/android.support.design" >
 
-    <item android:state_enabled="true" app:state_collapsed="false" app:state_collapsible="true">
-        <objectAnimator android:duration="@integer/app_bar_elevation_anim_duration"
-                        android:propertyName="elevation"
-                        android:valueTo="0dp"
-                        android:valueType="floatType"/>
+    <item
+        android:state_enabled="true"
+        ns0:state_collapsed="false"
+        ns0:state_collapsible="true">
+        <objectAnimator
+            android:duration="@integer/app_bar_elevation_anim_duration"
+            android:propertyName="elevation"
+            android:valueTo="0dp"
+            android:valueType="floatType" />
     </item>
-
     <item android:state_enabled="true">
-        <objectAnimator android:duration="@integer/app_bar_elevation_anim_duration"
-                        android:propertyName="elevation"
-                        android:valueTo="@dimen/design_appbar_elevation"
-                        android:valueType="floatType"/>
+        <objectAnimator
+            android:duration="@integer/app_bar_elevation_anim_duration"
+            android:propertyName="elevation"
+            android:valueTo="@dimen/design_appbar_elevation"
+            android:valueType="floatType" />
     </item>
-
     <item>
-        <objectAnimator android:duration="0"
-                        android:propertyName="elevation"
-                        android:valueTo="0"
-                        android:valueType="floatType"/>
+        <objectAnimator
+            android:duration="0"
+            android:propertyName="elevation"
+            android:valueTo="0"
+            android:valueType="floatType" />
     </item>
 
 </selector>
