--- a/android/testData/design_aar/res/color/design_error.xml
+++ b/android/testData/design_aar/res/color/design_error.xml
@@ -14,7 +14,11 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false" android:color="?android:attr/textColorTertiary"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item
+        android:state_enabled="false"
+        android:color="?android:attr/textColorTertiary"/>
     <item android:color="?attr/textColorError"/>
+
 </selector>
