--- a/android/testData/design_aar/res/drawable-anydpi-v21/design_ic_visibility.xml
+++ b/android/testData/design_aar/res/drawable-anydpi-v21/design_ic_visibility.xml
@@ -14,15 +14,14 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
 -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
+    android:height="24dp"
+    android:viewportHeight="24.0"
+    android:viewportWidth="24.0"
+    android:width="24dp" >
 
     <path
         android:fillColor="@android:color/white"
-        android:pathData="@string/path_password_eye"/>
+        android:pathData="@string/path_password_eye" />
 
 </vector>
