--- a/android/testData/design_aar/res/drawable-v21/avd_hide_password.xml
+++ b/android/testData/design_aar/res/drawable-v21/avd_hide_password.xml
@@ -13,74 +13,57 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-  -->
+-->
+<animated-vector xmlns:aapt="http://schemas.android.com/aapt"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
-<animated-vector
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt">
-
-    <aapt:attr name="android:drawable">
-
+    <aapt:attr name="android:drawable" >
         <vector
-            android:width="24dp"
             android:height="24dp"
             android:viewportHeight="24"
-            android:viewportWidth="24">
-
+            android:viewportWidth="24"
+            android:width="24dp" >
             <path
                 android:name="strike_through"
                 android:pathData="@string/path_password_strike_through"
                 android:strokeColor="@android:color/white"
                 android:strokeLineCap="square"
                 android:strokeWidth="1.8"
-                android:trimPathEnd="0"/>
+                android:trimPathEnd="0" />
 
             <group>
-
                 <clip-path
                     android:name="eye_mask"
-                    android:pathData="@string/path_password_eye_mask_visible"/>
+                    android:pathData="@string/path_password_eye_mask_visible" />
 
                 <path
                     android:name="eye"
                     android:fillColor="@android:color/white"
-                    android:pathData="@string/path_password_eye"/>
-
+                    android:pathData="@string/path_password_eye" />
             </group>
-
         </vector>
-
     </aapt:attr>
 
-    <target android:name="eye_mask">
-
-        <aapt:attr name="android:animation">
-
+    <target android:name="eye_mask" >
+        <aapt:attr name="android:animation" >
             <objectAnimator
                 android:duration="@integer/hide_password_duration"
                 android:interpolator="@android:interpolator/fast_out_slow_in"
                 android:propertyName="pathData"
                 android:valueFrom="@string/path_password_eye_mask_visible"
                 android:valueTo="@string/path_password_eye_mask_strike_through"
-                android:valueType="pathType"/>
-
+                android:valueType="pathType" />
         </aapt:attr>
-
     </target>
-
-    <target android:name="strike_through">
-
-        <aapt:attr name="android:animation">
-
+    <target android:name="strike_through" >
+        <aapt:attr name="android:animation" >
             <objectAnimator
                 android:duration="@integer/hide_password_duration"
                 android:interpolator="@android:interpolator/fast_out_slow_in"
                 android:propertyName="trimPathEnd"
                 android:valueFrom="0"
-                android:valueTo="1"/>
-
+                android:valueTo="1" />
         </aapt:attr>
-
     </target>
 
 </animated-vector>
