--- a/android/testData/design_aar/res/drawable-v21/design_bottom_navigation_item_background.xml
+++ b/android/testData/design_aar/res/drawable-v21/design_bottom_navigation_item_background.xml
@@ -13,7 +13,6 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-  -->
-
+-->
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="?attr/colorPrimary" />
+    android:color="?android.support.v7.appcompat:attr/colorPrimary" />
