--- a/android/testData/design_aar/res/drawable/design_password_eye.xml
+++ b/android/testData/design_aar/res/drawable/design_password_eye.xml
@@ -14,14 +14,11 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
 -->
-
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
         android:drawable="@drawable/design_ic_visibility"
         android:state_checked="true"/>
-
-    <item
-        android:drawable="@drawable/design_ic_visibility_off"/>
+    <item android:drawable="@drawable/design_ic_visibility_off"/>
 
 </selector>
