--- a/android/testData/design_aar/res/layout-sw600dp-v13/design_layout_snackbar.xml
+++ b/android/testData/design_aar/res/layout-sw600dp-v13/design_layout_snackbar.xml
@@ -14,11 +14,10 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
 -->
-
 <view xmlns:android="http://schemas.android.com/apk/res/android"
-      class="android.support.design.widget.Snackbar$SnackbarLayout"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="bottom|center_horizontal"
-      android:theme="@style/ThemeOverlay.AppCompat.Dark"
-      style="@style/Widget.Design.Snackbar" />
+    style="@style/Widget.Design.Snackbar"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom|center_horizontal"
+    class="android.support.design.widget.Snackbar$SnackbarLayout"
+    android:theme="@*android.support.v7.appcompat:style/ThemeOverlay.AppCompat.Dark" />
