--- a/android/testData/design_aar/res/layout/design_navigation_menu.xml
+++ b/android/testData/design_aar/res/layout/design_navigation_menu.xml
@@ -14,11 +14,10 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
 -->
-<android.support.design.internal.NavigationMenuView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/design_navigation_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/design_navigation_padding_bottom"
-        android:clipToPadding="false"
-        android:scrollbars="vertical"/>
+<android.support.design.internal.NavigationMenuView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/design_navigation_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clipToPadding="false"
+    android:paddingBottom="@dimen/design_navigation_padding_bottom"
+    android:scrollbars="vertical" />
