--- a/android/testData/design_aar/res/layout/design_text_input_password_icon.xml
+++ b/android/testData/design_aar/res/layout/design_text_input_password_icon.xml
@@ -14,13 +14,11 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
 -->
-
-<android.support.design.widget.CheckableImageButton
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CheckableImageButton xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/text_input_password_toggle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical|end|right"
-    android:background="?attr/selectableItemBackgroundBorderless"
+    android:background="?android.support.v7.appcompat:attr/selectableItemBackgroundBorderless"
     android:minHeight="48dp"
-    android:minWidth="48dp"/>
+    android:minWidth="48dp" />
