--- a/android/src/com/android/tools/idea/gradle/structure/configurables/suggestions/SuggestionViewerUi.form
+++ b/android/src/com/android/tools/idea/gradle/structure/configurables/suggestions/SuggestionViewerUi.form
@@ -19,7 +19,7 @@
           <size top="4" left="4" bottom="4" right="4"/>
         </border>
         <children>
-          <component id="19f1a" class="javax.swing.JButton" binding="myUpdateButton" default-binding="true">
+          <component id="751bd" class="com.intellij.ui.components.JBOptionButton" binding="myUpdateButton" custom-create="true" default-binding="true">
             <constraints border-constraint="North"/>
             <properties>
               <opaque value="false"/>
