Revert "[NPW] Enable "Use AndroidX artifacts" by default"
This reverts commit 9238e8eb9c7d27318fb3e09c68060be23d1af3f2.

Reason for revert: many UI test failures

Change-Id: Ifeff7c7e8ecb970ad282c659f3d8e5a6779d0a0b

--- a/android/src/com/android/tools/idea/npw/project/ConfigureAndroidProjectStep.form
+++ b/android/src/com/android/tools/idea/npw/project/ConfigureAndroidProjectStep.form
@@ -212,7 +212,7 @@
         <properties>
           <font style="0"/>
           <label value="Use AndroidX artifacts"/>
-          <selected value="true"/>
+          <selected value="false"/>
           <text value="Use AndroidX artifacts"/>
         </properties>
       </component>
