--- a/android/src/com/android/tools/idea/flags/ExperimentalSettingsConfigurable.form
+++ b/android/src/com/android/tools/idea/flags/ExperimentalSettingsConfigurable.form
@@ -13,7 +13,7 @@
           <grid row="0" column="0" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="&lt;html&gt;&lt;b&gt;Note:&lt;/b&gt; This settings are for features that are considered &lt;b&gt;experimental&lt;/b&gt;.&lt;/html&gt;"/>
+          <text value="&lt;html&gt;&lt;b&gt;Note:&lt;/b&gt; These settings are for features that are considered &lt;b&gt;experimental&lt;/b&gt;.&lt;/html&gt;"/>
         </properties>
       </component>
       <vspacer id="d6e1c">
